# Digit-Recognition

gui/: DrawWindow.cpp  DrawWindow.h
src/: CMakeLists.txt
