cmake_minimum_required(VERSION 3.10)

# Nombre del proyecto
project(HandwrittenDigitRecognition)

# Establecer C++ est치ndar
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# A침adir los directorios de include
include_directories(include)

# A침adir fuentes de la aplicaci칩n
add_executable(HandwrittenDigitRecognition 
    app/main.cpp
    src/MatrixManipulation.cpp
    src/NetLayer.cpp
    src/NeuralNetwork.cpp
    gui/DrawWindow.cpp
)

# Linkear SFML
find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
target_link_libraries(HandwrittenDigitRecognition sfml-graphics sfml-window sfml-system)
